manifests/bases/microservices-demo/default/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-demo
  annotations:
    #cert-manager.io/cluster: "letsencrypt-prod"  
    # FIXME uncomment me to get a valid certificate
spec:
  tls:
  - hosts:
    - localhost  # FIXME change me to get a valid certificate
    secretName: microservices-demo-tls
  rules:
  - host: localhost  # FIXME change me to get a valid certificate
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8000
